# cgalsubmodule

./: .gitmodules  CMakeLists.txt  README.md
test-with-externalproject/: CMakeLists.txt  simpleTest.cpp  simpleTest2.cpp
